add info CFBundleIconName

--- a/slimeapp/Info.plist
+++ b/slimeapp/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>SlimeMes</string>
+    <key>CFBundleIconName</key>
+    <string>SlimeMes</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
